[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Bates <bryancbates@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
env_logger = "0.9.0"
log = "0.4.14"
